--- a/client/pages/login/index.wxml
+++ b/client/pages/login/index.wxml
@@ -1,4 +1,25 @@
-<!--pages/login/index.wxml-->
-<view class='container'>  
-    进入社区  
-</view> 
+<!--pages/welcome/welcome.wxml-->
+<!--start.wxml-->
+<view class="container">
+  <view class="remind-box" wx:if="{{remind}}">
+    <image class="remind-img" src="/images/loading.gif"></image>
+  </view>
+  <block wx:else>
+    <!-- <image class="title" src="/images/title8.png"></image> -->
+    <view class="content">
+      <view class="hd" style="transform:rotateZ({{angle}}deg);">
+        <image class="logo" src="{{userInfo.avatarUrl}}"></image>
+        <image class="wave" src="/images/wave.png" mode="aspectFill"></image>
+        <image class="wave wave-bg" src="/images/wave.png" mode="aspectFill"></image>
+      </view>
+      <view class="bd">
+        <image class="smalltitle" src="/images/title.png"></image>
+        <view class="confirm-btn" bindtap='goToIndex'>
+          <text>进入社区</text>
+        </view>
+        <text class="copyright">欢迎体验社区</text>
+      </view>
+    </view>
+  </block>
+  <wxc-dialog class="wxc-dialog" title="微信授权" content="获得您的公开信息(昵称、头像等)" logName="社区" logImage="../../images/login_icon.jpg" bindcancel="onCancel" bindconfirm="onConfirm"></wxc-dialog>
+</view>
