--- a/client/pages/topic/create/index.wxml
+++ b/client/pages/topic/create/index.wxml
@@ -1,9 +1,16 @@
-<view class='talkaround_create'>
+<view class='topic_create'>
   <form bindsubmit="bindFormSubmit">
-    <view class="talkaround_input">
-      <textarea name="content" auto-focus="true" maxlength="200" placeholder="你此刻的想法..." />
-      <view class="talkaround_image"><text>十</text></view>
+    <view class="topic_input">
+      <textarea name="content" auto-focus="true" maxlength="200" placeholder="此刻的想法..." />
+      <view class="topic_img" style="height: 120rpx">
+          <block wx:for="{{images}}" wx:for-item="image" >
+             <image src="{{image}}"></image> 
+          </block>  
+         <view class="topic_image_up" bindtap='chooseImage'><text>十</text></view> 
+      </view>
     </view>
-      <button class="talkaround_bt" form-type="submit"> 发表 </button>
+    <view>
+      <button class="topic_bt" form-type="submit"> 发表 </button>
+    </view>
   </form>
 </view>
