--- a/client/pages/activity/index.wxss
+++ b/client/pages/activity/index.wxss
@@ -1,27 +1,66 @@
-/**index.wxss**/
-page{
- 
-background-size: 100% 100%; 
-overflow:hidden; 
-position:fixed; margin: 0px; 
-}
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.activity_item{
+    width: 48%;
+    margin: 1% 0% 1% 1%;
+    display: inline-block;
+    vertical-align: top;
+    /* border: 1rpx solid green; */
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.activity_item .activity_details {
+  position: relative;
+  left: 10rpx;
+  /* border: 1rpx solid yellow; */
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.activity_item .activity_details .user_info {
+  float: left;
+  width: 20%;
+  /* border: 1rpx solid red; */
 }
 
-.usermotto {
-  margin-top: 200px;
+.activity_item .activity_details .user_info text {
+  display: inline-block;
+  height: 40rpx;
+  font-weight: bolder;
+  vertical-align: middle;
+  margin: 0 0 0 10rpx;
+  font-size: 20rpx;
+  /* border: 1rpx solid green; */
+}
+
+
+.activity_item .activity_details .activity_info{
+  /* height: 40rpx; */
+  font-weight: bolder;
+  width: 75%;
+  float: right;
+  /* vertical-align: middle; */
+  /* margin: auto; */
+  padding: 0 0 0 0rpx;
+  font-size: 20rpx;
+  text-align:left;
+  /* border: 1rpx solid green; */
+}
+
+.activity_item .activity_details .activity_info .activity_content{
+  text-decoration:underline;
+  font-weight:100;
+}
+
+.activity_item .activity_details .activity_memo{
+  /* height: 40rpx; */
+  font-weight: bolder;
+  width: 75%;
+  float: left;
+  font-size: 20rpx;
+  text-align:left;
+  /* border: 1rpx solid green; */
+  margin: 2% 0 0 1%;
+}
+
+.activity_item .icon{
+  width: 50rpx;
+  height: 50rpx;
+  vertical-align: middle;
+  margin: 10rpx;
 }
