--- a/client/pages/me/index.wxss
+++ b/client/pages/me/index.wxss
@@ -1,1 +1,24 @@
-/* pages/me/index.wxss */
+.me {
+  margin: 2%;
+  border: 1rpx solid green;
+  background:	#FFFFF0;
+}
+.me .me_basic {
+  height: 180rpx;
+  margin: 2%;
+  border: 1rpx solid blue;
+}
+.me .me_basic .me_text {
+  font-size:30rpx;
+  font-weight:900;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0 140rpx;
+  line-height: 60rpx;
+  border: 1rpx solid red;
+}
+.me_basic image {
+  width: 120rpx;
+  height: 120rpx;  
+  float: left;
+  border-radius: 50%;
+}
