--- a/client/pages/topic/index.wxml
+++ b/client/pages/topic/index.wxml
@@ -1,5 +1,5 @@
 <scroll-view class='container' scroll-y="true" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-<movable-area style="height: {{move_height}}px;width: {{move_width}}px;">
+<movable-area>
   <swiper indicator-dots="{{indicatorDots}}" circular="{{circular}}" interval="{{interval}}" autoplay="{{autoPlay}}">
     <block wx:for="{{images}}" wx:for-item="item" wx:for-index="idx">
       <swiper-item>
@@ -59,8 +59,7 @@
             maxlength="1024"
             cursor-spacing="15"
             fixed="true"
-            auto-height 
-            bindinput='getCommentContent'/>
+            auto-height />
   <button class='send-button' data-authoruid="{{authorUid}}" data-authornickname="{{authorNickName}}" form-type="submit"><view>发送</view></button>
 </view>
 </form>
