topic图片上传优化

--- a/client/pages/topic/create/index.wxml
+++ b/client/pages/topic/create/index.wxml
@@ -2,11 +2,11 @@
   <form bindsubmit="bindFormSubmit">
     <view class="topic_input">
       <textarea name="content" auto-focus="true" maxlength="200" placeholder="此刻的想法..." />
-      <view class="topic_img" style="height: 120rpx">
+      <view class="topic_img">
           <block wx:for="{{images}}" wx:for-item="image" >
              <image src="{{image}}" data-image="{{image}}" bindtap='previewImage'></image> 
           </block>  
-         <view class="topic_image_up" bindtap='chooseImage'><text>十</text></view> 
+          <image src="../../../images/topic/addImage.png" bindtap='chooseImage'></image>
       </view>
     </view>
     <view>
